--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -13,7 +13,7 @@
 <div class="main">
 
     <div class="section text-center">
-            <h2>Help For Your Small Business</h2>
+            <h2>Grow Your Small Business or Start Up</h2>
             <br><br>
                 <div class="container">
                         <div class="tim-title row">
@@ -70,35 +70,7 @@
                 <div class="col-md-8 mr-auto ml-auto">
                     <h2 class="text-center"><b>Contact Corporate Counsel</b></h2>
                     <br>
-                    <form class="contact-form" >
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Name</label>
-                                <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
-                                    <div class="input-group-prepend">
-                                      <span class="input-group-text"><i class="nc-icon nc-single-02"></i></span>
-                                    </div>
-                                    <input type="text" class="form-control" placeholder="Name" (focus)="focus=true" (blur)="focus=false" >
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <label>Email</label>
-                                <div class="input-group" [ngClass]="{'input-group-focus':focus1===true}">
-                                    <div class="input-group-prepend">
-                                      <span class="input-group-text">  <i class="nc-icon nc-email-85"></i></span>
-                                    </div>
-                                    <input type="text" class="form-control" placeholder="Email" (focus)="focus1=true" (blur)="focus1=false" >
-                                </div>
-                            </div>
-                        </div>
-                        <label>Message</label>
-                        <textarea class="form-control" rows="4" placeholder="Tell us your thoughts and feelings..."></textarea>
-                        <div class="row">
-                            <div class="col-md-4 mr-auto ml-auto">
-                                <button class="btn btn-danger btn-lg btn-fill">Send Message</button>
-                            </div>
-                        </div>
-                    </form>
+                    <app-contact-form></app-contact-form>
                 </div>
             </div>
         </div>
