--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,10 +1,13 @@
-<div class="page-header" data-parallax="true" style="background-image: url('./assets/img/salt-lake-city-night-City-Scape.jpg');">
+<div class="page-header" data-parallax="true"
+    style="background-image: url('./assets/img/brandon-mowinkel-3_JwPJwq6CI-unsplash.jpg');">
     <div class="filter"></div>
     <div class="container">
         <div class="motto text-center">
-            <h1>Corporate Counsel Law</h1>
-            <h3>Corporate & Real Estate Attorneys At Law</h3>
+            <h1 class="logo">C<span>&#178;</span></h1>
+            <h1>Color Country Tournaments</h1>
             <br />
+            <a href="tournaments" role="button" class="btn btn-lg btn-outline-dark" aria-disabled="true">See Upcoming
+                Tournaments</a>
         </div>
     </div>
     <div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); "></div>
@@ -13,62 +16,123 @@
 <div class="main">
 
     <div class="section text-center">
-            <h2>Grow Your Small Business or Start Up</h2>
-            <br><br>
-                <div class="container">
-                        <div class="tim-title row">
-                            <div class="col-sm">
-                                <app-carousel></app-carousel>
-                            </div>
-                            <div class="col-sm">
-                                <h3>"We will get the job done right, be here when you need us, 
-                                    and cost a lot cheaper than most... Thats our promise to you."</h3>
-                            </div>
-                        </div>
+        <h2>About Color Country Tournaments</h2>
+        <br><br>
+        <div class="container">
+            <div class="tim-title row">
+                <div class="col-sm">
+                    <app-carousel></app-carousel>
                 </div>
-        </div>
-
-<div class="section section-dark text-center">
-    <div class="container">
-        <h2 class="title">Attorney Profile</h2>
-        <div class="row">
-            <div class="col-md-8 mr-auto ml-auto">
-                <div class="card card-profile card-plain">
-                    <div class="card-avatar">
-                        <a href="#avatar"><img src="./assets/img/benNelson.jpg" alt="Profile Picture"></a>
-                    </div>
-                    <div class="card-block">
-                        <a href="#paper-kit">
-                            <div class="author">
-                                <h4 class="card-title">Benjamin Nelson</h4>
-                                <h6 class="card-category">Attorney At Law</h6>
-                            </div>
-                        </a>
-                        <p class="card-description text-center">
-                            Lorem ipsum dolor sit amet,. Donec laoreet tincidunt sollicitudin Donec. Proin sagittis turpis semper purus. Phasellus ut consectetur mauris magna,. Donec vel ligula eu erat.
-                            Sed dui lectus, varius eget. Nam sed magna urna quis. Praesent eget eleifend libero quis. Duis volutpat, dolor nec scelerisque. Phasellus in nisi diam ipsum.
-                            Donec mattis erat ac lorem. Vestibulum auctor augue ut enim. Curabitur ornare eleifend lectus, eget. Maecenas sodales, dui nec condimentum. Nam purus sapien, elementum nec.
-                            Suspendisse ullamcorper egestas molestie nisi. Mauris luctus ligula id nibh. Cras erat neque, dignissim in. In sapien nibh, tincidunt non. Sed sed mauris nibh et.
-                            Proin dui nibh, facilisis sed. Aliquam leo nulla, adipiscing sed. Proin scelerisque lectus rhoncus erat. Pellentesque aliquet ante sed nunc. Phasellus ut nibh justo sapien.
-                        </p>
-                    </div>
-                    <div class="card-footer text-center">
-                        <a href="#Benjamin" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-twitter"></i></a>
-                        <a href="#Benjamin" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-facebook"></i></a>
-                        <a href="#Benjamin" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-linkedin"></i></a>
-                    </div>
+                <div class="col-sm">
+                    <h3>"We will get the job done right, be here when you need us,
+                        and cost a lot cheaper than most... Thats our promise to you."</h3>
                 </div>
             </div>
-           
         </div>
     </div>
-</div>
+
+    <div class="section section-dark text-center">
+        <div class="container">
+            <h2 class="title">Chairmen</h2>
+            <div class="row">
+                <div class="col-md-4 mr-auto ml-auto">
+                    <div class="card card-profile card-plain">
+                        <div class="card-avatar">
+                            <a href="#avatar"><img src="./assets/img/benNelson.jpg" alt="Profile Picture"></a>
+                        </div>
+                        <div class="card-block">
+                            <a href="#paper-kit">
+                                <div class="author">
+                                    <h4 class="card-title">JR Quarnberg</h4>
+                                    <h6 class="card-category">Chairman</h6>
+                                </div>
+                            </a>
+                            <p class="card-description text-center">
+                                Lorem ipsum dolor sit amet,. Donec laoreet tincidunt sollicitudin Donec. Proin sagittis
+                                turpis semper purus. Phasellus ut consectetur mauris magna,. Donec vel ligula eu erat.
+                                Sed dui lectus, varius eget. Nam sed magna urna quis. Praesent eget eleifend libero
+                                quis. Duis volutpat.
+                            </p>
+                        </div>
+                        <div class="card-footer text-center">
+                            <a href="#Benjamin" class="btn btn-link btn-just-icon btn-neutral"><i
+                                    class="fa fa-twitter"></i></a>
+                            <a href="#Benjamin" class="btn btn-link btn-just-icon btn-neutral"><i
+                                    class="fa fa-facebook"></i></a>
+                            <a href="#Benjamin" class="btn btn-link btn-just-icon btn-neutral"><i
+                                    class="fa fa-linkedin"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mr-auto ml-auto">
+                    <div class="card card-profile card-plain">
+                        <div class="card-avatar">
+                            <a href="#avatar"><img src="./assets/img/benNelson.jpg" alt="Profile Picture"></a>
+                        </div>
+                        <div class="card-block">
+                            <a href="#paper-kit">
+                                <div class="author">
+                                    <h4 class="card-title">Danny Johnson</h4>
+                                    <h6 class="card-category">Chairman</h6>
+                                </div>
+                            </a>
+                            <p class="card-description text-center">
+                                Lorem ipsum dolor sit amet,. Donec laoreet tincidunt sollicitudin Donec. Proin sagittis
+                                turpis semper purus. Phasellus ut consectetur mauris magna,. Donec vel ligula eu erat.
+                                Sed dui lectus, varius eget. Nam sed magna urna quis. Praesent eget eleifend libero
+                                quis. Duis volutpat, dolor nec scelerisque. Phasellus in nisi diam ipsum.
+                                Donec mattis erat ac lorem.
+                            </p>
+                        </div>
+                        <div class="card-footer text-center">
+                            <a href="#Benjamin" class="btn btn-link btn-just-icon btn-neutral"><i
+                                    class="fa fa-twitter"></i></a>
+                            <a href="#Benjamin" class="btn btn-link btn-just-icon btn-neutral"><i
+                                    class="fa fa-facebook"></i></a>
+                            <a href="#Benjamin" class="btn btn-link btn-just-icon btn-neutral"><i
+                                    class="fa fa-linkedin"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mr-auto ml-auto">
+                    <div class="card card-profile card-plain">
+                        <div class="card-avatar">
+                            <a href="#avatar"><img src="./assets/img/benNelson.jpg" alt="Profile Picture"></a>
+                        </div>
+                        <div class="card-block">
+                            <a href="#paper-kit">
+                                <div class="author">
+                                    <h4 class="card-title">Tanner Chamberlain</h4>
+                                    <h6 class="card-category">Chairman</h6>
+                                </div>
+                            </a>
+                            <p class="card-description text-center">
+                                Lorem ipsum dolor sit amet,. Donec laoreet tincidunt sollicitudin Donec. Proin sagittis
+                                turpis semper purus. Phasellus ut consectetur mauris magna,. Donec vel ligula eu erat.
+                                Sed dui lectus, varius eget. Nam sed magna urna quis. Praesent eget eleifend libero
+                                quis. Duis
+                            </p>
+                        </div>
+                        <div class="card-footer text-center">
+                            <a href="#Benjamin" class="btn btn-link btn-just-icon btn-neutral"><i
+                                    class="fa fa-twitter"></i></a>
+                            <a href="#Benjamin" class="btn btn-link btn-just-icon btn-neutral"><i
+                                    class="fa fa-facebook"></i></a>
+                            <a href="#Benjamin" class="btn btn-link btn-just-icon btn-neutral"><i
+                                    class="fa fa-linkedin"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
 
     <div class="section landing-section">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 mr-auto ml-auto">
-                    <h2 class="text-center"><b>Contact Corporate Counsel</b></h2>
+                    <h2 class="text-center"><b>Contact Color Country Tournaments</b></h2>
                     <br>
                     <app-contact-form></app-contact-form>
                 </div>
