--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,33 +1,69 @@
 <div class="wrapper">
-    <div class="page-header page-header-xs" data-parallax="true" style="background-image: url('https://img.freepik.com/free-photo/wooden-table_36051-46.jpg?size=626&ext=jpg');">
+    <div class="page-header page-header-xs" data-parallax="true"
+        style="background-image: url('./assets/img/neonbrand-2PMH43yG9eU-unsplash.jpg');">
         <div class="filter"></div>
     </div>
-    <div class="section profile-content">
+    <div style="margin: 25px;">
         <div class="container">
-            <div class="owner">
-                <div class="avatar">
-                    <img src="./assets/img/benNelson.jpg" alt="Profile Picture" class="img-circle img-no-padding img-responsive">
-                </div>
-                <div class="name">
-                    <h4 class="title">Benjamin Nelson<br /></h4>
-                    <h6 class="description">Attorney At Law</h6>
-                </div>
-            </div>
             <div class="row">
-                <div class="col-md-6 ml-auto mr-auto text-center">
-                    <p>Lorem ipsum dolor sit amet,. Donec laoreet tincidunt sollicitudin Donec. Proin sagittis turpis semper purus. Phasellus ut consectetur mauris magna,. Donec vel ligula eu erat.
-                        Sed dui lectus, varius eget. Nam sed magna urna quis. Praesent eget eleifend libero quis. Duis volutpat, dolor nec scelerisque. Phasellus in nisi diam ipsum.
-                        Donec mattis erat ac lorem. Vestibulum auctor augue ut enim. Curabitur ornare eleifend lectus, eget. Maecenas sodales, dui nec condimentum. Nam purus sapien, elementum nec.
-                        Suspendisse ullamcorper egestas molestie nisi. Mauris luctus ligula id nibh. Cras erat neque, dignissim in. In sapien nibh, tincidunt non. Sed sed mauris nibh et.
-                        Proin dui nibh, facilisis sed. Aliquam leo nulla, adipiscing sed. Proin scelerisque lectus rhoncus erat. Pellentesque aliquet ante sed nunc. Phasellus ut nibh justo sapien.</p>
-                    <br />
+                <div class="col-md-4 mr-auto ml-auto">
+                    <div class="card" style="width: 18rem;">
+                        <img class="card-img-top" src="./assets/img/eduardo-balderas-UVxd5b-_tw8-unsplash.jpg"
+                            alt="Little League">
+                        <div class="card-body">
+                            <h5 class="card-title">Heat Stroker</h5>
+                            <h6 class="card-title">May 2020</h6>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the
+                                card's content.</p>
+                            <a href="#" class="btn btn-primary">Register</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mr-auto ml-auto">
+                    <div class="card" style="width: 18rem;">
+                        <img class="card-img-top" src="./assets/img/eduardo-balderas-UVxd5b-_tw8-unsplash.jpg"
+                            alt="Little League">
+                        <div class="card-body">
+                            <h5 class="card-title">Color Country Classic</h5>
+                            <h6 class="card-title">April 2020</h6>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the
+                                card's content.</p>
+                            <a href="#" class="btn btn-primary">Register</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mr-auto ml-auto">
+                    <div class="card" style="width: 18rem;">
+                        <img class="card-img-top" src="./assets/img/eduardo-balderas-UVxd5b-_tw8-unsplash.jpg"
+                            alt="Little League">
+                        <div class="card-body">
+                            <h5 class="card-title">Little Chuck Wagon Classic</h5>
+                            <h6 class="card-title">May 2020</h6>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the
+                                card's content.</p>
+                            <a href="#" class="btn btn-primary">Register</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mr-auto ml-auto">
+                    <div class="card" style="width: 18rem;">
+                        <img class="card-img-top" src="./assets/img/eduardo-balderas-UVxd5b-_tw8-unsplash.jpg"
+                            alt="Little League">
+                        <div class="card-body">
+                            <h5 class="card-title">Eighty-Niner</h5>
+                            <h6 class="card-title">May 2020</h6>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the
+                                card's content.</p>
+                            <a href="#" class="btn btn-primary">Register</a>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <br/>
-            <div class="nav-tabs-navigation">
-                <div class="nav-tabs-wrapper">
-                </div>
-            </div>
+
         </div>
     </div>
 </div>
