--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,27 +1,27 @@
 <nav class="navbar navbar-expand-lg fixed-top navbar-transparent" color-on-scroll="500">
     <div class="container">
         <div class="navbar-translate">
-            <a class="navbar-brand" href="/">Corporate Counsel Law</a>
+            <a class="navbar-brand" href="/">Color Country Tournaments</a>
         </div>
         <div class="navbar-collapse" id="navbarToggler">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom" href="https://www.linkedin.com/in/benjamin-nelson-45980a12/" target="_blank">
-                        <i class="fa fa-linkedin"></i>
-                        <!-- <p class="d-lg-none">LinkedIn</p> -->
+                    <a class="nav-link" rel="tooltip" placement="bottom" ngbPopover="#colorcountrytournaments"
+                        popoverTitle="Venmo Us At...">
+                        <i class="fa fa-money"></i>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" rel="tooltip" placement="bottom" ngbPopover="CorporateCounselLaw.com" popoverTitle="Email Us At...">
+                    <a class="nav-link" rel="tooltip" placement="bottom" ngbPopover="colorcountrytournaments@gmail.com"
+                        popoverTitle="Email Us At...">
                         <i class="fa fa-envelope-o"></i>
-                        <!-- <p class="d-lg-none">Email</p> -->
                     </a>
                 </li>
                 <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" placement="bottom" ngbPopover="(435)453-3522" popoverTitle="Call Us At...">
-                            <i class="fa fa-phone"></i>
-                            <!-- <p class="d-lg-none">Phone</p> -->
-                        </a>
+                    <a class="nav-link" rel="tooltip" placement="bottom" ngbPopover="(435)453-3522"
+                        popoverTitle="Call Us At...">
+                        <i class="fa fa-phone"></i>
+                    </a>
                 </li>
 
             </ul>
