--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -6,7 +6,8 @@
   <div style="margin: 25px;">
     <div class="container">
       <div class="row">
-        <h3>Tournaments<span> &nbsp; <i class="fa fa-plus" aria-hidden="true"></i></span></h3>
+        <h3>Tournaments<span> &nbsp; <i class="fa fa-plus" data-target="#tournamentModal" data-toggle='modal'
+              type="button" aria-hidden="true"></i></span></h3>
         <table class="table table-striped">
           <thead>
             <tr>
@@ -58,4 +59,35 @@
     </div>
   </div>
 
+</div>
+
+
+//tournament modal
+<div class="modal fade" id="tournamentModal" tabindex="-1" role="dialog" aria-labelledby="tournamentLabel"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="tournamentLabel">
+          Create Tournament
+        </h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form novalidate #form="ngForm">
+
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">
+          Close
+        </button>
+        <button type="button" class="btn btn-primary" data-dismiss="modal">
+          Create
+        </button>
+      </div>
+    </div>
+  </div>
 </div>
