--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -16,7 +16,7 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the
                                 card's content.</p>
-                            <a href="#" class="btn btn-primary">Register</a>
+                            <!-- <a href="#" class="btn btn-primary">Register</a> -->
                         </div>
                     </div>
                 </div>
@@ -30,7 +30,7 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the
                                 card's content.</p>
-                            <a href="#" class="btn btn-primary">Register</a>
+                            <!-- <a href="#" class="btn btn-primary">Register</a> -->
                         </div>
                     </div>
                 </div>
@@ -39,12 +39,12 @@
                         <img class="card-img-top" src="./assets/img/eduardo-balderas-UVxd5b-_tw8-unsplash.jpg"
                             alt="Little League">
                         <div class="card-body">
-                            <h5 class="card-title">Little Chuck Wagon Classic</h5>
+                            <h5 class="card-title">Little Chuck Wagon</h5>
                             <h6 class="card-title">May 2020</h6>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the
                                 card's content.</p>
-                            <a href="#" class="btn btn-primary">Register</a>
+                            <!-- <a href="#" class="btn btn-primary">Register</a> -->
                         </div>
                     </div>
                 </div>
@@ -58,7 +58,7 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the
                                 card's content.</p>
-                            <a href="#" class="btn btn-primary">Register</a>
+                            <!-- <a href="#" class="btn btn-primary">Register</a> -->
                         </div>
                     </div>
                 </div>
